--- a/index.html
+++ b/index.html
@@ -278,6 +278,25 @@
             box-shadow: 0 10px 30px rgba(0, 0, 0, 0.05);
             backdrop-filter: blur(6px);
         }
+
+        .coming-soon {
+            color: var(--muted);
+            font-weight: 600;
+        }
+
+        :root[data-theme="lando"] .card {
+            background: rgba(34, 34, 34, 0.85);
+            border: 1px solid #333;
+            color: #f5f5f5;
+        }
+        :root[data-theme="lando"] h2 {
+            color: #ff914d;
+        }
+        :root[data-theme="lando"] .tag {
+            background: color-mix(in oklab, #ff8000 40%, #1a1a1a);
+            color: #fff7f0;
+            border-color: #ff8000;
+        }
     </style>
 </head>
 
@@ -293,7 +312,7 @@
 
     <section class="hero">
         <div class="container">
-            <h1>Hi, I’m Katherine — I build playful-aesthetic, human‑centered apps.</h1>
+            <h1>Hi, I’m Katherine — I build playful-aesthetic, human-centered apps.</h1>
             <p class="subtle">F1 energy • Health & travel features • Clean, accessible UI</p>
             <div class="chips">
                 <span class="chip" style="--c:var(--sage)">🩺 Health</span>
@@ -314,7 +333,7 @@
         <h2>Projects</h2>
         <article class="proj card">
             <h3>Calculator — Shunting-Yard</h3>
-            <p>C++ expression evaluator using Dijkstra’s shunting-yard for precedence/associativity. UI buttons are
+            <p>C++ expression evaluator using shunting-yard for precedence/associativity. UI buttons are
                 produced via a <strong>factory pattern</strong>; evaluation runs on a dedicated <strong>processor
                     instance</strong> to keep concerns clean.</p>
             <div class="tags">
