Change wording for some parts

--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@
     <section class="hero">
         <div class="container">
             <h1>Hi, I’m Katherine — I build playful-aesthetic, human-centered apps.</h1>
-            <p class="subtle">F1 energy • Health & travel features • Clean, accessible UI</p>
+            <p class="subtle">F1 energy • Health & travel passion • Clean, accessible UI</p>
             <div class="chips">
                 <span class="chip" style="--c:var(--sage)">🩺 Health</span>
                 <span class="chip" style="--c:var(--sky)">✈️ Travel</span>
@@ -438,7 +438,7 @@
 
         <article class="proj card">
             <h3>Calculator — Shunting-Yard</h3>
-            <p>C++ expression evaluator using Dijkstra’s shunting-yard for precedence/associativity. UI buttons are
+            <p>C++ expression evaluator using shunting-yard for precedence/associativity. UI buttons are
                 produced via a <strong>factory pattern</strong>; evaluation runs on a dedicated <strong>processor
                     instance</strong> to keep concerns clean.</p>
             <div class="tags">
