Correct image file

--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@
         <div class="site-inner container">
             <div class="brand">
                 <div class="avatar-wrap">
-                    <img class="avatar" src="assets/img/avatar.jpg" alt="Katherine Isabela Hsiung Chen headshot" />
+                    <img class="avatar" src="assets/img/me.png" alt="Katherine Avatar" />
                     <span class="avatar-badge">KC</span>
                 </div><span>Katherine Isabela Hsiung Chen — Pole Position🏁</span>
             </div>
