Change some text colors

--- a/index.html
+++ b/index.html
@@ -446,6 +446,10 @@
             border: 2px solid #ff8000;
             font-size: 0;
         }
+
+        :root[data-theme="lando"] { --accent:#ff8000; }
+        .btn:hover{ background:var(--accent); color:#fff; border-color:transparent; }
+        :root[data-theme="carlos"] .btn:hover{ background:#0d347e; color:#fff; border-color:#0d347e; }
     </style>
 </head>
 
@@ -495,7 +499,7 @@
                 <span class="tag">Factory Pattern</span>
                 <span class="tag">Algorithms</span>
             </div>
-            <p><span class="coming-soon">Code (coming soon)</span></p> <!-- PLACEHOLDER for future video demo -->
+            <p><span class="coming-soon">Code (coming soon)</span></p>
         </article>
 
         <article class="proj card">
@@ -507,7 +511,7 @@
                 <span class="tag">wxWidgets</span>
                 <span class="tag">vcpkg</span>
             </div>
-            <p><span class="coming-soon">Code (coming soon)</span></p> <!-- PLACEHOLDER for future video demo -->
+            <p><span class="coming-soon">Code (coming soon)</span></p>
         </article>
 
         <article class="proj card">
@@ -519,7 +523,7 @@
                 <span class="tag">Blueprints</span>
                 <span class="tag">Prototype</span>
             </div>
-            <p><span class="coming-soon">Notes (coming soon)</span></p> <!-- PLACEHOLDER for future video demo -->
+            <p><span class="coming-soon">Notes (coming soon)</span></p>
         </article>
 
         <article class="proj card">
@@ -534,7 +538,7 @@
                 <span class="tag">Google Cloud</span>
                 <span class="tag">Xcode (iOS)</span>
             </div>
-            <p class="subtle">[Placeholder] Video demo coming soon.</p> <!-- PLACEHOLDER for future video demo -->
+            <p class="subtle">[Placeholder] Video demo coming soon.</p>
         </article>
 
         <article class="proj card">
@@ -547,7 +551,7 @@
                 <span class="tag">Sockets</span>
                 <span class="tag">Networking</span>
             </div>
-            <p class="subtle">[Placeholder] Video demo coming soon.</p> <!-- PLACEHOLDER for future video demo -->
+            <p class="subtle">[Placeholder] Video demo coming soon.</p>
         </article>
 
     </section>
