Now (for real) change colors

--- a/index.html
+++ b/index.html
@@ -447,9 +447,53 @@
             font-size: 0;
         }
 
-        :root[data-theme="lando"] { --accent:#ff8000; }
-        .btn:hover{ background:var(--accent); color:#fff; border-color:transparent; }
-        :root[data-theme="carlos"] .btn:hover{ background:#0d347e; color:#fff; border-color:#0d347e; }
+        :root[data-theme="lando"] {
+            --accent: #ff8000;
+        }
+
+        .btn:hover {
+            background: var(--accent);
+            color: #fff;
+            border-color: transparent;
+        }
+
+        :root[data-theme="carlos"] .btn:hover {
+            background: #0d347e;
+            color: #fff;
+            border-color: #0d347e;
+        }
+
+        :root[data-theme="lando"] {
+            --accent: #ff8000;
+        }
+
+        :root[data-theme="lando"] h2 {
+            color: #ff914d;
+        }
+
+        :root[data-theme="lando"] a,
+        :root[data-theme="lando"] nav a,
+        :root[data-theme="lando"] #contact a {
+            color: #ff8000;
+        }
+
+        .driver-bar .btn:hover {
+            background: var(--accent);
+            color: #fff;
+            border-color: transparent;
+        }
+
+        :root[data-theme="carlos"] .driver-bar .btn:hover {
+            background: #0d347e;
+            color: #fff;
+            border-color: #0d347e;
+        }
+
+        :root[data-theme="lando"] .driver-bar .btn:hover {
+            background: #ff8000;
+            color: #fff;
+            border-color: #ff8000;
+        }
     </style>
 </head>
 
