Change about description for a more suitable one

--- a/index.html
+++ b/index.html
@@ -601,8 +601,12 @@
 
     <section id="about" class="container">
         <h2>About</h2>
-        <p>I’m a CS student who blends health and travel features into friendly, accessible apps. I love pastel
-            palettes, clean and tiny interactions that make interfaces feel intentional.</p>
+        <p>My journey into computer science wasn’t straightforward. After realizing my first path wasn’t fulfilling, 
+            I decided to take a leap and pursue a hands-on education at Full Sail University. What began with uncertainty and 
+            self-doubt grew into a passion for the meeting point of code and aesthetics—something I first explored in my visually-focused calculator project. 
+            I’ve come to see programming as both a creative puzzle and a tool for building meaningful, well-designed experiences. 
+            As I explore my career path, I’m especially drawn to opportunities that connect travel, innovation, and design. 
+            I’m excited to grow within a company where I can keep learning, solving problems, and turning ideas into software that leaves an impact.</p>
     </section>
 
     <section id="contact" class="container">
